Fixed overflow color into atom theme

--- a/app/style/theme/atom.css
+++ b/app/style/theme/atom.css
@@ -90,3 +90,6 @@ body {
 .label {
   color: #21252b;
 }
+.cell-overflow-null {
+	color: #21252b;
+}
